// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense with 1 expense properly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $0.02
  </p>
</div>
`;

exports[`should render mutiple expenses properly 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $0.03
  </p>
</div>
`;
